--- a/styles.css
+++ b/styles.css
@@ -300,16 +300,41 @@ color: #ecdde7;
     color: #ecdde7; /* Font color */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     text-align: left;
+    font-size: 0.9 rem;
 }
 
 .projects-card h2, 
 .projects-card p, 
 .projects-card li, 
 .projects-card .projects-header, 
-.projects-card .company-department, 
+.projects-card .company, 
 .projects-card .job-title, 
 .projects-card .dates {
-    color: #ecdde7 !important; /* Consistent light color for all text */
+    color: #ecdde7;
+    font-size: 0.9 rem;
+}
+
+.projects-card .job-title {
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.projects-card .company {
+    font-weight: bold;
+    display: block;
+    margin-top: 10px;
+}
+
+.projects-card .branch {
+    font-style: italic;
+    display: block;
+    margin-bottom: 10px;
+    color: #d1d1d1;
+}
+
+.projects-card .dates {
+    text-align: right;
+    color: #ecdde7;
 }
 
 /* Project Card Hover Effect */
