--- a/styles.css
+++ b/styles.css
@@ -291,7 +291,7 @@ color: #ecdde7;
 .projects-card {
     width: 100%;
     max-width: 1000px;
-    padding: 20px;
+    padding: 20px 20px 20px 40px;
     margin: 20px auto;
     border: 1px solid #ecdde7;
     border-radius: 8px;
@@ -310,8 +310,7 @@ color: #ecdde7;
 .projects-card .company, 
 .projects-card .job-title, 
 .projects-card .dates {
-    color: #ecdde7;
-    font-size: 0.9rem; /* Corrected font-size */
+    padding-left: 20px;
 }
 
 .projects-card .job-title {
