--- a/styles.css
+++ b/styles.css
@@ -291,7 +291,7 @@ color: #ecdde7;
 .projects-card {
     width: 100%;
     max-width: 1000px;
-    padding: 20px;
+    padding: 20px 20px 20px 30px;
     margin: 20px auto;
     border: 1px solid #ecdde7;
     border-radius: 8px;
