--- a/styles.css
+++ b/styles.css
@@ -423,6 +423,7 @@ color: #ecdde7;
 
 /* Footer */
 footer {
+    width: 100%;
     margin-top: 2rem;
     padding: 1rem;
     background: #121240cc;
@@ -439,11 +440,18 @@ footer {
     gap: 10px;
 }
 
+.footer-icons {
+    display: flex;
+    justify-content: center;
+}
+
 .footer-icons a {
-    color: #ecdde7;
-    margin: 0 0.5rem;
-    font-size: 1.5rem;
-    transition: color 0.3s;
+    .footer-icons a {
+        color: #ecdde7;
+        margin: 0 0.5rem;
+        font-size: 1.5rem;
+        transition: color 0.3s;    
+    }
 }
 
 .footer-icons a:hover {
