--- a/styles.css
+++ b/styles.css
@@ -430,9 +430,8 @@ footer {
     color: #ecdde7;
     text-align: center;
     border-top: 1px solid #333; /* Border color */
-    position: fixed;
+    position: relative;
     bottom: 0;
-    left: 0;
 }
 
 .footer-content {
