--- a/styles.css
+++ b/styles.css
@@ -486,7 +486,7 @@ color: #ecdde7;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 10px;
     max-width: 600px;
     margin: 0 auto;
     color: #ecdde7;
@@ -494,8 +494,9 @@ color: #ecdde7;
 
 .contact-form label {
     align-self: flex-start;
-    font-size: 1rem;
-    color: #e66666;
+    font-size: 0.9rem;
+    color: #ecdde7;
+    margin-bottom: 3px;
 }
 
 .contact-form input,
