--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,11 @@ p {
     content: " 🥰";
 }
 
+/* Apply new font to the entire About Section */
+#about, .about-container, .about-text {
+    font-family: 'Playfair Display', sans-serif; /* Replace 'Montserrat' with your chosen font */
+}
+
 #skills {
     background-color: transparent;
     color: #ecdde7;
@@ -284,6 +289,19 @@ p {
     width: 50px;
     height: 50px;
     margin-bottom: 10px;
+}
+
+/* Other Skills Styling */
+.other-skills {
+    margin-top: 20px;
+}
+
+.other-skills .skill-card {
+    background: linear-gradient(135deg, #33cc33, #0099cc); /* Different gradient for non-tech skills */
+}
+.other-skills .skill-card .skill-icon {
+    font-size: 2rem;
+    color: #ecdde7;
 }
 
 /* Font Awesome Icons */
