--- a/styles.css
+++ b/styles.css
@@ -144,17 +144,13 @@ header nav a:focus,
 }
 
 header nav a.resume-button {
-    background-color: #e66666; /* Button background color */
-    color: #ffffff; /* Text color */
-    padding: 8px 15px;
-    border-radius: 5px;
+    color: #e66666; /* Text color */
     font-weight: bold;
-    transition: background-color 0.3s;
     text-decoration: none;
 }
 
 header nav a.resume-button:hover {
-    background-color: #cc5555; /* Darker color on hover */
+    color: #cc5555; /* Darker color on hover */
 }
 
 
