--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ header nav a {
 
 header nav a:hover,
 header nav a.active {
-    color: #e66666 !important; /* Pink highlight on hover */
+    color: #e66666 !important;
     font-weight: bold;
 }
 
